<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ScrollView
        android:id="@+id/scroll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_background_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relative1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/alfa_slab_one"
                    android:text="@string/textChar1"
                    android:textColor="@color/primaryTextWhite"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/textSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textTitle"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/alfa_slab_one"
                    android:text="@string/textSubtitle2"
                    android:textColor="@color/primaryTextWhite"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/image_logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    app:srcCompat="@drawable/app_logo" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/charImage"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/char1_f" />

                    <TextView
                        android:id="@+id/charName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/alfa_slab_one"
                        android:text="@string/textChar1"
                        android:textColor="#101530"
                        android:textSize="16sp"
                        app:layout_constraintStart_toEndOf="@+id/charImage"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/charSide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/roboto_slab_bold"
                        android:text="@string/charSide1"
                        android:textColor="#2196F3"
                        android:textSize="15sp"
                        app:layout_constraintStart_toEndOf="@+id/charImage"
                        app:layout_constraintTop_toBottomOf="@+id/charName" />

                    <TextView
                        android:id="@+id/cardSpecies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="21dp"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/roboto_slab_bold"
                        android:text="@string/cardSpecies1"
                        android:textColor="#2196F3"
                        android:textSize="15sp"
                        app:layout_constraintStart_toEndOf="@+id/charImage"
                        app:layout_constraintTop_toBottomOf="@+id/charSide" />

                    <ImageView
                        android:id="@+id/imageLike"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="4dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView3"
                        app:srcCompat="@drawable/like" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="4dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/dislike" />

                    <ImageView
                        android:id="@+id/saberImage"
                        android:layout_width="75dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/red_lightsaber" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="20dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/saber" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/charLongText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_slab_bold"
                        android:padding="10dp"
                        android:text="@string/charLongText1"
                        android:textAlignment="center"
                        android:textColor="#001068"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/imageGiant"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/char1_image"
                    tools:ignore="ImageContrastCheck" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>